--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ dependencies = [
     "pandas>=1.3.0",
     "CoolProp>=6.4.0",  # Fallback for REFPROP
     "matplotlib>=3.5.0",  # For GUI visualizations
+    "streamlit>=1.28.0",  # Streamlit UI
+    "plotly>=5.14.0",  # 3D visualization
+    "scikit-image>=0.19.0",  # Marching cubes
+    "numpy-stl>=3.0.0",  # STL export
 ]
 
 [project.optional-dependencies]
